# ldmx-sw

./: .gitignore  CMakeLists.txt
Biasing/src/: EcalPNProcessFilter.cxx  EcalPNProcessFilterMessenger.cxx  EcalProcessFilter.cxx  EcalProcessFilterMessenger.cxx  HighPassFilter.cxx  HighPassFilterMessenger.cxx  PhotoNuclearXsecBiasingOperator.cxx  TargetBremFilter.cxx  TargetBremFilterMessenger.cxx  TargetProcessFilter.cxx
Configuration/python/: sample_recon_trig_scint.py  sim_recon_prod.py.tmpl
DetDescr/: CMakeLists.txt
DetDescr/src/: HcalDetectorGeometry.cxx  ldmx_charm_gdml.cxx
Event/src/: EventConstants.cxx  HcalHit.cxx  HcalMipTrack.cxx  HcalMipTrack.h  HcalMipTriggerResult.cxx  HcalTrack.cxx  SimCalorimeterHit.cxx  SimTriggerPadHit.cxx  TrigScintHit.cxx
EventDisplay/: CMakeLists.txt
EventDisplay/src/: DetectorGeometry.cxx  EventDisplay.cxx  EventObjects.cxx
EventProc/python/: hcalDigis.py  trigScintDigis.py
EventProc/src/: CylinderEcalVetoProcessor.cxx  EcalDigiProducer.cxx  HcalDigiProducer.cxx  (+1 more)
Framework/: CMakeLists.txt
GammaMuMuAnalysis/: CMakeLists.txt
Hcal/: CMakeLists.txt
SimApplication/: CMakeLists.txt
Tools/: CMakeLists.txt
playtest/: CMakeLists.txt  tabn
playtest/include/playtest/: .HcalLayerAnalyzer.h.swp  HcalLayerAnalyzer.h  HcalTrack.h  HcalTrackAnalyzer.h  HcalTrackProducer.h  HitLog.h  eichl008DummyAnalyzer.h
playtest/python/: HcalTracks.py  TrackStudy.py
playtest/src/: .HcalLayerAnalyzer.cxx.swp  HcalLayerAnalyzer.cxx  HcalTrackAnalyzer.cxx  HcalTrackProducer.cxx  HitLog.cxx  eichl008DummyAnalyzer.cxx
(+135 files in other folders)
